# hol-qt

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: data_utils.py
